; ModuleID = '/home/carl/AnghaBench/timescaledb/src/loader/extr_loader.c_should_load_on_alter_extension.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/loader/extr_loader.c_should_load_on_alter_extension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@EXTENSION_NAME = common dso_local global i32 0, align 4
@loaded = common dso_local global i64 0, align 8
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [79 x i8] c"extension \22%s\22 cannot be updated after the old version has already been loaded\00", align 1
@.str.1 = private unnamed_addr constant [111 x i8] c"Start a new session and execute ALTER EXTENSION as the first command. Make sure to pass the \22-X\22 flag to psql.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @should_load_on_alter_extension to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @should_load_on_alter_extension(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_2__*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = bitcast i32* %5 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %6, %struct.TYPE_2__** %4, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @EXTENSION_NAME, align 4
  %11 = call i64 @strcmp(i32 %9, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %28

14:                                               ; preds = %1
  %15 = load i64, i64* @loaded, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %14
  %18 = load i32, i32* @ERROR, align 4
  %19 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %20 = call i32 @errcode(i32 %19)
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @errmsg(i8* getelementptr inbounds ([79 x i8], [79 x i8]* @.str, i64 0, i64 0), i32 %23)
  %25 = call i32 @errhint(i8* getelementptr inbounds ([111 x i8], [111 x i8]* @.str.1, i64 0, i64 0))
  %26 = call i32 @ereport(i32 %18, i32 %25)
  br label %27

27:                                               ; preds = %17, %14
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %13
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @strcmp(i32, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i32) #1

declare dso_local i32 @errhint(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
